--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Application which would let the users to list and browse user profiles.",
   "main": "server.js",
   "scripts": {
-    "client-install": "npm install --prefix client",
+    "client-install": "npm install --prefix userProfile_client",
     "start": "node server.js",
     "server": "nodemon server.js",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "client": "npm start --prefix userProfile_client",
+    "dev": "concurrently \"npm run server\" \"npm run userProfile_client\""
   },
   "author": "Aman Agarwal",
   "license": "MIT",
