--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix userProfile_client",
-    "dev": "concurrently \"npm run server\" \"npm run userProfile_client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Aman Agarwal",
   "license": "MIT",
